--- a/src/main/resources/view/loginForm.fxml
+++ b/src/main/resources/view/loginForm.fxml
@@ -1,18 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.LoginFormController">
+<AnchorPane prefHeight="454.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.LoginFormController">
    <children>
-      <Label layoutX="285.0" layoutY="20.0" text="Login" />
-      <TextField fx:id="txtUsername" layoutX="226.0" layoutY="95.0" promptText="Enter Usename" />
-      <TextField fx:id="txtPassword" layoutX="226.0" layoutY="162.0" promptText="Enter Password" />
-      <Label layoutX="226.0" layoutY="78.0" text="Username" />
-      <Label layoutX="226.0" layoutY="145.0" text="password" />
-      <Button layoutX="277.0" layoutY="248.0" mnemonicParsing="false" onAction="#btnLoginOnAction" text="Login" />
+      <ImageView fitHeight="484.0" fitWidth="846.0" layoutX="-10.0" layoutY="-20.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/lib2.jpg" />
+         </image>
+      </ImageView>
+      <Pane layoutX="268.0" layoutY="34.0" prefHeight="400.0" prefWidth="356.0" style="-fx-background-radius: 60;" styleClass="pane" stylesheets="@../css/Pane.css">
+         <children>
+            <Button layoutX="118.0" layoutY="312.0" mnemonicParsing="false" onAction="#btnLoginOnAction" prefHeight="34.0" prefWidth="119.0" style="-fx-background-radius: 50;" stylesheets="@../css/loginButton.css" text="Login">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="Book Antiqua Bold" size="15.0" />
+               </font>
+            </Button>
+            <Label layoutX="149.0" layoutY="10.0" text="Login" textFill="#fe8722">
+               <font>
+                  <Font name="Bookman Old Style Bold" size="22.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtUsername" layoutX="72.0" layoutY="99.0" prefHeight="34.0" prefWidth="213.0" promptText="Enter Usename" style="-fx-background-radius: 50;">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor>
+            </TextField>
+            <TextField fx:id="txtPassword" layoutX="72.0" layoutY="180.0" prefHeight="34.0" prefWidth="213.0" promptText="Enter Password" style="-fx-background-radius: 50;">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor>
+            </TextField>
+            <Label layoutX="83.0" layoutY="81.0" text="Username" textFill="#fe8722">
+               <font>
+                  <Font name="Bookman Old Style Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="83.0" layoutY="162.0" text="Password" textFill="#fe8722">
+               <font>
+                  <Font name="Bookman Old Style Bold" size="12.0" />
+               </font>
+            </Label>
+            <Button layoutX="207.0" layoutY="236.0" mnemonicParsing="false" onAction="#btnRegisterOnAction" prefHeight="25.0" prefWidth="68.0" style="-fx-background-radius: 50;" stylesheets="@../css/homeButton.css" text="Register" textFill="#fe8722">
+               <font>
+                  <Font name="Bookman Old Style Bold" size="12.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Label layoutX="75.0" layoutY="243.0" text="Dont&quot; have an account ?" textFill="WHITE">
+               <font>
+                  <Font name="Bookman Old Style Bold" size="10.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
