--- a/src/main/resources/view/MainForm.fxml
+++ b/src/main/resources/view/MainForm.fxml
@@ -1,16 +1,112 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.MainFormController">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane prefHeight="650.0" prefWidth="1100.0">
          <children>
-            <Button layoutX="82.0" layoutY="117.0" mnemonicParsing="false" onAction="#btnUserOnAction" text="User Registration Form" />
-            <Button layoutX="243.0" layoutY="117.0" mnemonicParsing="false" onAction="#btnBooksOnAction" text="Books Manage Form" />
-            <Button layoutX="398.0" layoutY="117.0" mnemonicParsing="false" onAction="#btnUserManageOnAction" text="UserManage Form" />
-            <Button layoutX="255.0" layoutY="188.0" mnemonicParsing="false" onAction="#btnPlaceOrderOnAction" text="Place Order Form" />
+            <ButtonBar layoutX="-1.0" layoutY="-9.0">
+               <buttons>
+                  <ImageView fitHeight="658.0" fitWidth="1103.0">
+                     <image>
+                        <Image url="@../images/LIB9.jpg" />
+                     </image>
+                  </ImageView>
+               </buttons>
+            </ButtonBar>
+            <JFXButton buttonType="RAISED" layoutX="48.0" layoutY="84.0" onAction="#btnUserOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #00C0EF;" text="Registration" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="101.0" fitWidth="96.0">
+                     <image>
+                        <Image url="@../images/icons8-user-90.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+            <JFXButton layoutX="388.0" layoutY="84.0" onAction="#btnUserManageOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #00a75a;" text="User Manage " textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <graphic>
+                  <ImageView>
+                     <image>
+                        <Image url="@../images/icons8-user-settings-96.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+            <JFXButton layoutX="728.0" layoutY="84.0" onAction="#btnBooksOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #F39C11;" text="Books Manage" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="70.0" fitWidth="70.0">
+                     <image>
+                        <Image url="@../images/icons8-book-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+            <Label fx:id="lblUseCount" layoutX="219.0" layoutY="87.0" prefHeight="59.0" prefWidth="21.0" text="3" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="35.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblBookCount" layoutX="870.0" layoutY="88.0" text="10" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="35.0" />
+               </font>
+            </Label>
+            <JFXButton layoutX="221.0" layoutY="385.0" onAction="#btnPlaceOrderOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #DC4B38;" text="Place Your Order" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <graphic>
+                  <ImageView>
+                     <image>
+                        <Image url="@../images/icons8-create-order-90.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+            <JFXButton layoutX="521.0" layoutY="385.0" onAction="#btnLogOutOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #DC4B38;" text="Log Out" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="94.0" fitWidth="94.0">
+                     <image>
+                        <Image url="@../images/icons8-log-out-96.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
          </children>
       </AnchorPane>
    </children>
