--- a/src/main/resources/view/UserManageForm.fxml
+++ b/src/main/resources/view/UserManageForm.fxml
@@ -1,50 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.UserManageFormController">
    <children>
       <AnchorPane prefHeight="650.0" prefWidth="1100.0">
          <children>
-            <TextField fx:id="txtId" layoutX="277.0" layoutY="129.0" prefHeight="45.0" prefWidth="260.0" promptText="Enter User ID" style="-fx-background-radius: 30;" />
-            <Label layoutX="376.0" layoutY="18.0" text="User Management Form">
-               <font>
-                  <Font name="System Bold" size="40.0" />
-               </font></Label>
-            <Label layoutX="295.0" layoutY="106.0" text="User ID">
-               <font>
-                  <Font size="15.0" />
-               </font></Label>
-            <Button layoutX="6.0" layoutY="8.0" mnemonicParsing="false" onAction="#btnBackOnAction" prefHeight="45.0" prefWidth="83.0" text="Home" />
-            <Button layoutX="371.0" layoutY="418.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Update" />
-            <Button layoutX="478.0" layoutY="420.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Clear" />
-            <Button layoutX="589.0" layoutY="418.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Remove" />
-            <Button layoutX="712.0" layoutY="421.0" mnemonicParsing="false" onAction="#btnSearchOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Search" />
-            <TextField fx:id="txtAddress" layoutX="275.0" layoutY="295.0" prefHeight="45.0" prefWidth="260.0" promptText="Address" style="-fx-background-radius: 30;" />
-            <TextField fx:id="txtName" layoutX="275.0" layoutY="214.0" prefHeight="45.0" prefWidth="260.0" promptText="User Name" style="-fx-background-radius: 30;" />
-            <TextField fx:id="txtPassword" layoutX="710.0" layoutY="210.0" prefHeight="45.0" prefWidth="260.0" promptText="Password" style="-fx-background-radius: 30;" />
-            <TextField fx:id="txtEmail" layoutX="705.0" layoutY="127.0" prefHeight="45.0" prefWidth="260.0" promptText="E-mail" style="-fx-background-radius: 30;" />
-            <Label layoutX="296.0" layoutY="189.0" text="User Name">
-               <font>
-                  <Font size="15.0" />
-               </font></Label>
-            <Label layoutX="302.0" layoutY="270.0" text="Address">
-               <font>
-                  <Font size="15.0" />
-               </font></Label>
-            <Label layoutX="725.0" layoutY="105.0" text="E-mail">
-               <font>
-                  <Font size="15.0" />
-               </font></Label>
-            <Label layoutX="727.0" layoutY="185.0" text="Password">
-               <font>
-                  <Font size="15.0" />
-               </font></Label>
-            <Button layoutX="826.0" layoutY="420.0" mnemonicParsing="false" onAction="#btnReportOnAction" prefHeight="45.0" prefWidth="83.0" style="-fx-background-radius: 30;" text="Report" />
+            <ImageView fitHeight="621.0" fitWidth="840.0" layoutX="261.0" layoutY="30.0">
+               <image>
+                  <Image url="@../images/lib8.2.png" />
+               </image>
+            </ImageView>
+            <Pane layoutX="-101.0" layoutY="-9.0" prefHeight="660.0" prefWidth="702.0" style="-fx-background-radius: 100;" styleClass="pane" stylesheets="@../css/Pane.css">
+               <children>
+                  <TextField fx:id="txtPassword" layoutX="164.0" layoutY="497.0" prefHeight="45.0" prefWidth="260.0" promptText="Password" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txtEmail" layoutX="162.0" layoutY="414.0" prefHeight="45.0" prefWidth="260.0" promptText="E-mail" style="-fx-background-radius: 30;" />
+                  <Label layoutX="182.0" layoutY="392.0" text="E-mail" textFill="#fe8722">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="181.0" layoutY="472.0" text="Password" textFill="#fe8722">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="txtId" layoutX="161.0" layoutY="165.0" prefHeight="45.0" prefWidth="260.0" promptText="Enter User ID" style="-fx-background-radius: 30;" />
+                  <Label layoutX="180.0" layoutY="142.0" text="User ID" textFill="#fe8722">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="txtAddress" layoutX="161.0" layoutY="331.0" prefHeight="45.0" prefWidth="260.0" promptText="Address" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txtName" layoutX="161.0" layoutY="250.0" prefHeight="45.0" prefWidth="260.0" promptText="User Name" style="-fx-background-radius: 30;" />
+                  <Label layoutX="182.0" layoutY="225.0" text="User Name" textFill="#fe8722">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="183.0" layoutY="306.0" text="Address" textFill="#fe8722">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="184.0" layoutY="19.0" text="User Management Form" textFill="#fe8722">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Label>
+                  <JFXButton buttonType="RAISED" layoutX="524.0" layoutY="157.0" onAction="#btnSearchOnAction" prefHeight="62.0" prefWidth="178.0" stylesheets="@../css/RegisterFormBtn.css" text="Search" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+                  <JFXButton buttonType="RAISED" layoutX="524.0" layoutY="238.0" onAction="#btnUpdateOnAction" prefHeight="62.0" prefWidth="178.0" stylesheets="@../css/RegisterFormBtn.css" text="Update" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+                  <JFXButton buttonType="RAISED" layoutX="524.0" layoutY="319.0" onAction="#btnDeleteOnAction" prefHeight="62.0" prefWidth="178.0" stylesheets="@../css/RegisterFormBtn.css" text="Remove" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+                  <JFXButton buttonType="RAISED" layoutX="524.0" layoutY="401.0" onAction="#btnReportOnAction" prefHeight="62.0" prefWidth="178.0" stylesheets="@../css/RegisterFormBtn.css" text="Report" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+                  <JFXButton buttonType="RAISED" layoutX="524.0" layoutY="485.0" onAction="#btnClearOnAction" prefHeight="62.0" prefWidth="178.0" stylesheets="@../css/RegisterFormBtn.css" text="Clear" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+               </children>
+            </Pane>
+            <Button layoutX="5.0" layoutY="5.0" mnemonicParsing="false" onAction="#btnBackOnAction" prefHeight="44.0" prefWidth="50.0" style="-fx-background-radius: 50;" stylesheets="@../css/homeButton.css">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/icons8-home-48.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
          </children>
       </AnchorPane>
    </children>
